Move categories controller to admin

--- a/config/locales/sk.yml
+++ b/config/locales/sk.yml
@@ -2,6 +2,7 @@ sk:
   items:
     form:
       save_changes: Ulozit zmeny
-  categories:
-    form:
-      save_changes: Ulozit zmeny
+  admin:
+    categories:
+      form:
+        save_changes: Ulozit zmeny
