--- a/config/locales/sk.yml
+++ b/config/locales/sk.yml
@@ -1,8 +1,96 @@
 sk:
+  navbar:
+    brand: "Bazarko"
+    categories: "Kategórie"
+    profile: "Profil"
+    logout: "Odhlásiť sa"
+    items: "Inzeráty"
+    contact: "Kontakt"
+    admin: "Admin"
+    login: "Prihlásiť sa"
+    register: "Registrovať sa"
+  homepage:
+    welcome:
+      title: "Vitaj na Bazarko!"
+      description: "Prezerajte, vyhľadávajte alebo pridávajte inzeráty rýchlo a jednoducho."
+      view_items: "Pozrieť inzeráty"
+      explore_categories: "Preskúmať kategórie"
+      add_new_item: "Pridať nový inzerát"
+    latest_ads:
+      title: "Najnovšie inzeráty"
+      no_ads: "Žiadne inzeráty zatiaľ nie sú dostupné."
+      more_details: "Zobraziť viac"
+      published: "Publikované:"
+    item:
+      price: "Cena"
   items:
+    index:
+      title: "Inzeráty"
+      add_item: "Pridať Inzerát"
+      search_placeholder: "Vyhľadať inzerát..."
+      search_button: "Hľadať"
+    edit:
+      title: "Úprava inzerátu"
+      back: "Späť"
+    new:
+      title: "Pridanie inzerátu"
+      back: "Späť"
+    show:
+      back: "Späť"
+      price: "Cena"
+      category: "Kategória"
+      owner: "Majiteľ"
+      published: "Publikované"
+      edit: "Upraviť"
+      delete: "Odstrániť"
+      delete_confirm: "Určite?"
+      view_more: "Zobraziť viac"
+      carousel:
+        previous: "Predchádzajúce"
+        next: "Nasledujúce"
+    card:
+      price: "Cena"
+      category: "Kategória"
+      owner: "Majiteľ"
+      published: "Publikované"
+      edit: "Upraviť"
+      delete: "Odstrániť"
+      delete_confirm: "Určite?"
+      view_more: "Zobraziť viac"
     form:
-      save_changes: Ulozit zmeny
-  admin:
-    categories:
-      form:
-        save_changes: Ulozit zmeny
+      name: "Názov inzerátu"
+      price: "Cena"
+      category: "Kategória"
+      image: "Zvoľ obrázok"
+      remove_image: "Vymazať"
+      remove_image_confirm: "Určite?"
+      save_changes: "Uložiť zmeny"
+  categories:
+    index:
+      title: "Kategórie"
+      link: "Zobraziť detaily"
+    show:
+      title: "Detail kategórie"
+      back: "Späť"
+      edit: "Upraviť"
+      delete: "Vymazať"
+      delete_confirm: "Určite?"
+      empty: "V tejto kategórii sa nenachádzajú žiadne inzeráty."
+      admin:
+        back: "Späť"
+        edit: "Upraviť"
+        delete: "Vymazať"
+        delete_confirm: "Určite?"
+    new:
+      title: "Pridanie kategórie"
+      back: "Späť"
+      save: "Uložiť"
+      cancel: "Zrušiť"
+    edit:
+      title: "Úprava kategórie"
+      back: "Späť"
+      save: "Uložiť"
+      cancel: "Zrušiť"
+    form:
+      name: "Názov kategórie"
+      save_changes: "Uložiť zmeny"
